change root namespace

--- a/Disposable.asmdef
+++ b/Disposable.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "Disposable",
-    "rootNamespace": "",
+    "rootNamespace": "Disposable",
     "references": [
 	],
     "includePlatforms": [],
