--- a/Tests/Disposable.Tests.asmdef
+++ b/Tests/Disposable.Tests.asmdef
@@ -5,7 +5,9 @@
         "Disposable",
         "UnityEngine.TestRunner"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
